# dokter

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  create-mr.sh  dockter.Dockerfile  dokter.Dockerfile  generate_docs.py  requirements.txt  setup.cfg
docs/: dfa000.md  dfa001.md  dfa002.md  dfa003.md  dfa004.md  dfa005.md  dfa006.md  dfa007.md  dfa008.md  dfa009.md  dfa010.md  dfa011.md  dfa012.md  overview.md
fixtures/: Dockerfile  ansible.Dockerfile  faulty.Dockerfile  mailgun.Dockerfile  python.Dockerfile
src/: analyzer.py  parser.py
src/dockter/: analyzer.py  main.py  parser.py
src/dokter/: analyzer.py  main.py  parser.py  shellcheck.py
tests/: test_analyzer.py  test_parser.py
tests/integration/: test_dockter.py  test_dokter.py
