[metadata]
name = dockter
description = dockter: The doctor for your Dockerfiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/gitlab-org/incubation-engineering/ai-assist/dockter
author = Fred de Gier
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
    Topic :: Security
keywords = test, unittest
project_urls =
    Source=https://gitlab.com/gitlab-org/incubation-engineering/ai-assist/dockter/-/tree/main
    Tracker=https://gitlab.com/gitlab-org/incubation-engineering/ai-assist/dockter/-/issues

[options]
packages =
    dockter

python_requires = >=3.10
package_dir =
    =src
setup_requires =
    setuptools
zip_safe = no

[options.entry_points]
console_scripts =
    dockter=dockter.analyzer:analyze

[tool:pytest]
pythonpath = . src
